force-app/main/default/objects/QuoteLineItem/fields/Appt__c.field-meta.xml
<CustomField>
    <fullName>Appt__c</fullName>
    <formula>If(Text(Product2.Family) = &apos;Saleable Unit&apos;,Product2.Appt__c,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Appt #</label>
    <type>Text</type>
</CustomField>