force-app/main/default/objects/QuoteLineItem/fields/Design_Style__c.field-meta.xml
<CustomField>
    <fullName>Design_Style__c</fullName>
    <formula>If(Text(Product2.Family) = &apos;Saleable Unit&apos;,text(Product2.Design_Style__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Design Style</label>
    <type>Text</type>
</CustomField>