force-app/main/default/objects/QuoteLineItem/fields/Development_Charges__c.field-meta.xml
<CustomField>
    <fullName>Development_Charges__c</fullName>
    <formula>if(Text(Product2.Family) = &apos;Saleable Unit&apos;,PricebookEntry.Development_Charges__c, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Development Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>