force-app/main/default/objects/QuoteLineItem/fields/Floor_No__c.field-meta.xml
<CustomField>
    <fullName>Floor_No__c</fullName>
    <formula>If(Text(Product2.Family) = &apos;Saleable Unit&apos;,Text(Product2.Floor_No__c) ,&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor No.</label>
    <type>Text</type>
</CustomField>