force-app/main/default/objects/QuoteLineItem/fields/Floor_Rise_Charges__c.field-meta.xml
<CustomField>
    <fullName>Floor_Rise_Charges__c</fullName>
    <formula>if(Text(Product2.Family) = &apos;Saleable Unit&apos;,PricebookEntry.Floor_Rise_Charges__c * Quantity, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Rise Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>