force-app/main/default/objects/QuoteLineItem/fields/Gross_Total__c.field-meta.xml
<CustomField>
    <fullName>Gross_Total__c</fullName>
    <label>Gross Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>