force-app/main/default/objects/QuoteLineItem/fields/GST_on_Other_Charges2__c.field-meta.xml
<CustomField>
    <fullName>GST_on_Other_Charges2__c</fullName>
    <label>GST on Other Charges</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>