force-app/main/default/objects/QuoteLineItem/fields/Hold_Product__c.field-meta.xml
<CustomField>
    <fullName>Hold_Product__c</fullName>
    <label>Hold Product</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hold</fullName>
            </value>
            <value>
                <fullName>Unhold</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>