force-app/main/default/objects/QuoteLineItem/fields/Inventory_Status__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Status__c</fullName>
    <formula>Text( Product2.Unit_Status__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Status</label>
    <type>Text</type>
</CustomField>