force-app/main/default/objects/QuoteLineItem/fields/Inventory_Type__c.field-meta.xml
<CustomField>
    <fullName>Inventory_Type__c</fullName>
    <formula>If(Text(Product2.Family) = &apos;Saleable Unit&apos;,Text(Product2.Unit_Category__c),&apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Inventory Type</label>
    <type>Text</type>
</CustomField>