force-app/main/default/objects/QuoteLineItem/fields/Material_Code__c.field-meta.xml
<CustomField>
    <fullName>Material_Code__c</fullName>
    <formula>IF(ISPICKVAL(Product2.Family,&apos;Saleable Unit&apos;),  Product2.Material_Code__c , &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Material_Code</label>
    <type>Text</type>
</CustomField>