force-app/main/default/objects/QuoteLineItem/fields/Parking_Included__c.field-meta.xml
<CustomField>
    <fullName>Parking_Included__c</fullName>
    <formula>Product2.Project__r.Parking_Included_per_unit__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Parking Included</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>