force-app/main/default/objects/QuoteLineItem/fields/Possession_Charges_GST_Included__c.field-meta.xml
<CustomField>
    <fullName>Possession_Charges_GST_Included__c</fullName>
    <label>Possession Charges(GST Included)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>