force-app/main/default/objects/QuoteLineItem/fields/Preferential_Location_charges__c.field-meta.xml
<CustomField>
    <fullName>Preferential_Location_charges__c</fullName>
    <formula>if(Text(Product2.Family) = &apos;Saleable Unit&apos;, PricebookEntry.Preferred_Location_Charges__c  * Quantity, 0.00)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Preferential Location charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>