force-app/main/default/objects/QuoteLineItem/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <formula>If(Text(Product2.Family) = &apos;Saleable Unit&apos;,Product2.Project__r.Name,&apos;&apos;)</formula>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>