force-app/main/default/objects/QuoteLineItem/fields/Registration__c.field-meta.xml
<CustomField>
    <fullName>Registration__c</fullName>
    <formula>If(Product_Family__c = &apos;Saleable Unit&apos;,PricebookEntry.Registration_Charges__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Registration</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>