force-app/main/default/objects/QuoteLineItem/fields/Scanning_Charges__c.field-meta.xml
<CustomField>
    <fullName>Scanning_Charges__c</fullName>
    <formula>IF(  ISPICKVAL(Product2.Family, &apos;Saleable Unit&apos;), PricebookEntry.Scanning_Charges__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Scanning Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>