force-app/main/default/objects/QuoteLineItem/fields/Send_Reminder__c.field-meta.xml
<CustomField>
    <fullName>Send_Reminder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Reminder</label>
    <type>Checkbox</type>
</CustomField>