force-app/main/default/objects/QuoteLineItem/fields/Stamp_Duty__c.field-meta.xml
<CustomField>
    <fullName>Stamp_Duty__c</fullName>
    <formula>If(Product_Family__c = &apos;Saleable Unit&apos;,PricebookEntry.Stamp_Duty__c,0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Stamp Duty</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>