force-app/main/default/objects/QuoteLineItem/fields/Tax_on_Flat__c.field-meta.xml
<CustomField>
    <fullName>Tax_on_Flat__c</fullName>
    <formula>PricebookEntry.CGST__c +PricebookEntry.SGST__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>GST</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>