force-app/main/default/objects/QuoteLineItem/fields/Unit_No__c.field-meta.xml
<CustomField>
    <fullName>Unit_No__c</fullName>
    <label>Unit No</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>