force-app/main/default/objects/QuoteLineItem/validationRules/Discount_Cannot_be_more_than_2.validationRule-meta.xml
<ValidationRule>
    <fullName>Discount_Cannot_be_more_than_2</fullName>
    <active>true</active>
    <errorConditionFormula>Discount  &gt;  0.02</errorConditionFormula>
    <errorMessage>Discount % cannot be more than 2%</errorMessage>
</ValidationRule>